--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <div class="nav-wrapper">
       <div class="left-side">
         <div class="nav-link-wrapper">
-          <a href="MarketEye.html">Home</a>
+          <a href="index.html">Home</a>
         </div>
 
         <div class="nav-link-wrapper">
