--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						
 						<div class="left-side">
 							<div class="nav-link-wrapper active-nav-link">
-								<a href="marketeye.html">home</a>
+								<a href="index.html">home</a>
 							</div>
 							<div class="nav-link-wrapper">
 								<a href="about.html">about</a>
