--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 			  <b>MarketEye Customer Support:</b> <i>+39 344 928 2929</i></p>
 			  
 				<img src="../../../Documents/Unnamed Site 2/office1.jpg" alt="MarketEye Founder" width="300" height="300">
-			  	<img src="../../../Documents/Unnamed Site 2/office2.jpg" alt="MarketEye Head Developer" width="300" height="300"> 
+			  	<img src="office2.jpg" alt="MarketEye Head Developer" width="300" height="300"> 
 			  <p><b>MarketEye Founder &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Head Analyst</b></p>
 			  <br>
 			  
