--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 			  <hr size="3" width="823" color="black"> 
           <p>With over three decades of experience in financial services and the worldwide markets, the team behind MarketEye </p></p>undertook to create a platform that would serve only the most intelligent of investors in casting a surveilling glance </p> <p> at the state of the markets. </p>
           </p>
-				<img src="../../../Documents/Unnamed Site 2/smc.jpg" alt="Stock Chart, Downtrend.">
+				<img src="smc.jpg" alt="Stock Chart, Downtrend.">
 			<p>
 			</p>
           <p>It is common knowledge that corrections, bubbles and crashes are practically inevitable due to human nature, or perhaps</p> <p>some other mysterious factor. The information presented on MarketEye aims to help you identify an upcoming crash </p> <p> or correction, and rebalance your portfolio accordingly.</p>
