--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<head>
 		<!--- META TAGS --->
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, intial-scale=1">
 		<meta name="description" content="An online monitor for global markets.">
 		<!--- Website Title --->
 		<title>MarketEye</title>
